%% sybil Version History

\name{NEWS}
\title{sybil News}
\encoding{UTF-8}

\newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}

\section{Changes in version 1.3.3 2015-11-25}{
  \itemize{
    \item \code{addReact} crashed for irreversible models.
  }
}
% ---------------------------------------------------------------------------- %
\section{Changes in version 1.3.2 2015-10-21}{
  \itemize{
  	\item New Algorithm \code{fbaEasyConstraint} and \code{mtfEasyConstraint} 
  	implemented. With these new \code{sysBiolAlg}-Classes it is easier to add 
  	linear constraints to a model. See package vignette or manual for more details.
    \item \code{switch} needs the first parameter explicitly named.
  }
}
% ---------------------------------------------------------------------------- %

\section{Changes in version 1.3.1 2015-10-02}{
  \itemize{
  	\item \code{rmReact} error, if resulting model had only one gene left, corrected.
    \item \code{deadEndMetabolite()} could miss deadEndMetabolites if reactions differ in stoichiometry e.g. 1 and 2.
  }
}
% ---------------------------------------------------------------------------- %

\section{Changes in version 1.3.1 2015-08-06}{
  \itemize{
    \item \code{readTSVmod} had a mistake in the documentation about singletons.
  }
}

% ---------------------------------------------------------------------------- %

\section{Changes in version 1.3.0 2015-06-17}{
  \itemize{
    \item changed maintainer
    \item \code{.parseBoolean} now gives a warning, but handles empty gpr in a intuitive way.
  }
}

% ---------------------------------------------------------------------------- %
\section{Changes in version 1.2.10 2015-03-30}{
  \itemize{
    \item \code{findExchangeReact} can now deal with real big matrices (>30.000 columns).
    \item additional example for readProb and writeProb.
    \item modified \code{multiDel} to not use \code{require}